--- a/pwc.html
+++ b/pwc.html
@@ -25,7 +25,7 @@
 
     .enable{
         margin-left: 4em; 
-        font-family: Arial, Helvetica, sans-serif
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     .parameter{
