--- a/pwc.html
+++ b/pwc.html
@@ -442,7 +442,20 @@
 
             data = trace;
 
-            Plotly.newPlot('plot',data);
+            Plotly.newPlot('plot',
+                            data,
+                            {
+                            xaxis: {
+                                linecolor: 'black',
+                                linewidth: 2,
+                                mirror: true
+                            },
+                            yaxis: {
+                                linecolor: 'black',
+                                linewidth: 2,
+                                mirror: true
+                            }
+                            });
         }
 
         document.getElementById('form1').onsubmit = function(event) {
