--- a/pwc.html
+++ b/pwc.html
@@ -30,14 +30,14 @@
 
     .enable{
         margin-left: 2em; 
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Montserrat',sans-serif;;
     }
 
     .parameter{
         font-family: 'Montserrat',sans-serif;
         font-size: 130%;
         color: rgb(90, 33, 143);
-        /*font-weight: bold;*/
+        font-weight: bold;
     }
 
     .equation{
@@ -47,6 +47,7 @@
     .weight{
         font-weight: bold;
         font-size: 120%;
+        font-family: 'Montserrat',sans-serif;
     }
 
     .container{
@@ -56,7 +57,7 @@
 
     .leftpane{
         width: 23em;
-        height: 32em;
+        height: 31em;
         float: left;
         position: relative;
     }
@@ -79,7 +80,7 @@
 
     .rightpane{
         width: 53em;
-        height: 100%;
+        height: 30em;
         position: relative;
         /*float: right;*/
         margin-left: 25em;
@@ -193,7 +194,7 @@
                     </label>
                     <br><br>
                     <label class="weight" for="w1" >
-                        W<sub>1</sub> =
+                        w<sub>1</sub> =
                     </label>
                     <input type="number" class="w" id="w1" value="1" />
                     <input type="submit" value="Update" class="button" />
@@ -221,7 +222,7 @@
                     </span>
                     <br>
                     <label class ="weight" for="w2" >
-                        W<sub>2</sub> =
+                        w<sub>2</sub> =
                     </label>
                     <input type="number" class="w" id="w2" value="2" />
                     <input type="submit" value="Update" class="button" />
@@ -245,7 +246,7 @@
                     </label>
                     <br><br>
                     <label class ="weight" for="w3" >
-                        W<sub>3</sub> =
+                        w<sub>3</sub> =
                     </label>
                     <input type="number" class="w" id="w3" value="3" />
                     <input type="submit" value="Update" class="button" />
@@ -269,7 +270,7 @@
                     </label>
                     <br><br>
                     <label class ="weight" for="w4" >
-                        W<sub>4</sub> =
+                        w<sub>4</sub> =
                     </label>
                     <input type="number" class="w" id="w4" value="4" />
                     <input type="submit" value="Update" class="button" />
@@ -293,7 +294,7 @@
                     </label>
                     <br><br>
                     <label class ="weight" for="w5" >
-                        W<sub>5</sub> =
+                        w<sub>5</sub> =
                     </label>
                     <input type="number" class="w" id="w5" value="5" />
                     <input type="submit" value="Update" class="button" />
