--- a/pwc.html
+++ b/pwc.html
@@ -31,16 +31,18 @@
     .enable{
         margin-left: 3px; 
         font-family: 'Montserrat',sans-serif;
+        font-size: 90%;
     }
 
     .freeze{
         margin-left: 3px; 
         font-family: 'Montserrat',sans-serif;
+        font-size: 90%;
     }
 
     .parameter{
         font-family: 'Montserrat',sans-serif;
-        font-size: 130%;
+        font-size: 120%;
         color: rgb(90, 33, 143);
         font-weight: bold;
     }
@@ -68,8 +70,8 @@
     }
 
     .leftpane{
-        width: 28em;
-        height: 31em;
+        width: 27em;
+        height: 32.5em;
         float: left;
         position: relative;
     }
@@ -80,22 +82,52 @@
         padding-top: 6px;
         padding-left: 6px;
         background-color: #ece9e9;
-        box-shadow: 1px 1px 3px #c2bebe;
+        box-shadow: 2px 2px 4px #c2bebe;
         margin-left: 10px;
+    }
+
+    #l1:hover{
+        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(0, 128, 255);
+        -moz-box-shadow:inset 0px 0px 0px 3px rgb(0, 128, 255);
+        box-shadow: inset 0px 0px 0px 3px rgb(0, 128, 255);
+    }
+
+    #l2:hover{
+        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(255, 102, 51);
+        -moz-box-shadow:inset 0px 0px 0px 3px rgb(255, 102, 51);
+        box-shadow: inset 0px 0px 0px 3px rgb(255, 102, 51);
+    }
+
+    #l3:hover{
+        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(51, 204, 51);
+        -moz-box-shadow:inset 0px 0px 0px 3px rgb(51, 204, 51);
+        box-shadow: inset 0px 0px 0px 3px rgb(51, 204, 51);
+    }
+
+    #l4:hover{
+        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(214, 41, 0);
+        -moz-box-shadow:inset 0px 0px 0px 3px rgb(214, 41, 0);
+        box-shadow: inset 0px 0px 0px 3px rgb(214, 41, 0);
+    }
+
+    #l5:hover{
+        -webkit-box-shadow:inset 0px 0px 0px 3px rgb(153, 0, 153);
+        -moz-box-shadow:inset 0px 0px 0px 3px rgb(153, 0, 153);
+        box-shadow: inset 0px 0px 0px 3px rgb(153, 0, 153);
     }
     
     .inleft:hover{
-        -webkit-box-shadow:inset 0px 0px 0px 3px black;
-        -moz-box-shadow:inset 0px 0px 0px 3px black;
+        -webkit-box-shadow:inset 0px 0px 0px 3px blueviolet;
+        -moz-box-shadow:inset 0px 0px 0px 3px blueviolet;
         box-shadow: inset 0px 0px 0px 3px blueviolet;
     }
 
     .rightpane{
-        width: 51em;
+        width: 52em;
         height: 30em;
         position: relative;
         /*float: right;*/
-        margin-left: 30em;
+        margin-left: 29em;
         background-color: lightskyblue;
         border-collapse: collapse;
     }
@@ -130,7 +162,7 @@
         content: "";
         height: 12px;
         width: 18px;
-        left: 3px;
+        left: 4px;
         bottom: 3px;
         background-color: white;
         -webkit-transition: .4s;
@@ -146,9 +178,9 @@
     }
 
     input:checked + .slider:before {
-        -webkit-transform: translateX(15px);
-        -ms-transform: translateX(15px);
-        transform: translateX(15px);
+        -webkit-transform: translateX(13px);
+        -ms-transform: translateX(13px);
+        transform: translateX(13px);
     }
 
     .button {
@@ -206,24 +238,15 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: whitesmoke;
-        -webkit-transition: .4s;
-        transition: .4s;
-        border: 2px solid rgb(184, 181, 181);
-    }
-
-    .toggler:before {
-        position: absolute;
-        content: "";
-        height: 0px;
-        width: 0px;
         background-color: white;
-        -webkit-transition: .4s;
-        transition: .4s;
+        -webkit-transition: .2s;
+        transition: .2s;
+        border: 2px solid rgb(153, 151, 151);
     }
 
     input:checked + .toggler {
-       background-color: rgb(13, 202, 13);
+       background-color: rgb(64, 161, 240);
+       border-color: rgb(97, 95, 95);
     }
 
 </style>
@@ -233,8 +256,7 @@
     </div>
     <div class="container">
         <div class="leftpane">
-
-            <div class="inleft" style="margin-top:16px">
+            <div class="inleft" id="l1" style="margin-top: 16px;">
                 <form id="form1" class="form">
                     <label>
                         <span class="parameter">
@@ -248,11 +270,11 @@
                     <label class="weight" for="w1" >
                         w<sub>1</sub> =
                     </label>
-                    <input type="number" class="w" id="w1" value="1" />
+                    <input type="number" step="any" class="w" id="w1" value="1" />
                     <label class="variable" for="v1">
                         t =
                     </label>
-                    <input type="number" class="v" id="v1" value="0" />
+                    <input type="number" step="any" class="v" id="v1" value="0" />
                     <input type="submit" value="Update" class="button" />
                     <span class="freeze">Freeze :</span>
                     <label class="toggle">
@@ -267,7 +289,7 @@
                 </form>
             </div>
             <br>
-            <div class="inleft">
+            <div class="inleft" id="l2">
                 <form id="form2" class="form">
                     <label>
                         <span class="parameter">
@@ -285,11 +307,11 @@
                     <label class ="weight" for="w2" >
                         w<sub>2</sub> =
                     </label>
-                    <input type="number" class="w" id="w2" value="2" />
+                    <input type="number" step="any" class="w" id="w2" value="2" />
                     <label class="variable" for="v2">
                         x =
                     </label>
-                    <input type="number" class="v" id="v2" value="0" />
+                    <input type="number" step="any" class="v" id="v2" value="0" />
                     <input type="submit" value="Update" class="button" />
                     <span class="freeze">Freeze :</span>
                     <label class="toggle">
@@ -304,7 +326,7 @@
                 </form>
             </div>
             <br>
-            <div class="inleft">
+            <div class="inleft" id="l3">
                 <form id="form3" class="form">
                     <label>
                         <span class="parameter">
@@ -318,11 +340,11 @@
                     <label class ="weight" for="w3" >
                         w<sub>3</sub> =
                     </label>
-                    <input type="number" class="w" id="w3" value="3" />
+                    <input type="number" step="any" class="w" id="w3" value="3" />
                     <label class="variable" for="v3">
                         x =
                     </label>
-                    <input type="number" class="v" id="v3" value="0" />
+                    <input type="number" step="any" class="v" id="v3" value="0" />
                     <input type="submit" value="Update" class="button" />
                     <span class="freeze">Freeze :</span>
                     <label class="toggle">
@@ -337,7 +359,7 @@
                 </form>
             </div>
             <br>
-            <div class="inleft">
+            <div class="inleft" id="l4">
                 <form id="form4" class="form">
                     <label>
                         <span class="parameter">
@@ -351,11 +373,11 @@
                     <label class ="weight" for="w4" >
                         w<sub>4</sub> =
                     </label>
-                    <input type="number" class="w" id="w4" value="4" />
+                    <input type="number" step="any" class="w" id="w4" value="4" />
                     <label class="variable" for="v4">
                         x =
                     </label>
-                    <input type="number" class="v" id="v4" value="0" />
+                    <input type="number" step="any" class="v" id="v4" value="0" />
                     <input type="submit" value="Update" class="button" />
                     <span class="freeze">Freeze :</span>
                     <label class="toggle">
@@ -370,7 +392,7 @@
                 </form>
             </div>
             <br>
-            <div class="inleft">
+            <div class="inleft" id="l5">
                 <form id="form5" class="form">
                     <label>
                         <span class="parameter">
@@ -384,11 +406,11 @@
                     <label class ="weight" for="w5" >
                         w<sub>5</sub> =
                     </label>
-                    <input type="number" class="w" id="w5" value="5" />
+                    <input type="number" step="any" class="w" id="w5" value="5" />
                     <label class="variable" for="v5">
                         x =
                     </label>
-                    <input type="number" class="v" id="v5" value="0" />
+                    <input type="number" step="any" class="v" id="v5" value="0" />
                     <input type="submit" value="Update" class="button" />
                     <span class="freeze">Freeze :</span>
                     <label class="toggle">
@@ -408,6 +430,7 @@
     </div>
 
     <script>
+        /*graph functions*/
         function draw(){
             function fw0(w,x){
                 return w/(1+x);
@@ -428,20 +451,14 @@
             function draw(data){
                 Plotly.newPlot('plot', data);
             }
-
-            fw=[fw0,fw1,fw2,fw3,fw4]
-
-            const min=-10;
-            const max=15;
-            const step=0.01;
-            const pts=parseInt((max-min)/step);
+            fw=[fw0,fw1,fw2,fw3,fw4];
 
             w=document.getElementsByClassName("w");
             e=document.getElementsByClassName("e");
             f=document.getElementsByClassName("f");
             v=document.getElementsByClassName("v");
 
-            es=[];
+            es=[];/*checks which parameters are enabled*/
             for(i=0;i<5;i++){
                 if(e[i].checked)
                     es[i]=1;
@@ -449,11 +466,17 @@
                     es[i]=0;
             }
 
-            xVal=[];
+            const min=-100;
+            const max=100;
+            const step=0.01;
+            const pts=parseInt((max-min)/step);
+
+            const xVal=[];/*array of x coordinates*/
             for(i=0;i<=pts;i++){
                 xVal[i]=min+step*i;
             }
 
+            /*arrays of y coordinates of parameters*/
             yVal0=[];
             yVal1=[];
             yVal2=[];
@@ -479,7 +502,7 @@
                 yVal4[i]=fw[4](w[4].value,xVal[i]);
             }
 
-            fVal=[];
+            fVal=[];/*array storing freeze values of functions*/
             for(i=0;i<5;i++){
                 fVal[i]=fw[i](w[i].value,parseFloat(v[i].value));
             }
@@ -491,7 +514,7 @@
                         yVal[i][j]=fVal[i];
             }
 
-            for(i=0;i<=pts;i++){
+            for(i=0;i<=pts;i++){/*total heuristic yValues*/
                 if((min+step*i)!=-1)
                     yVal5[i]=es[0]*yVal[0][i]+es[1]*yVal[1][i]+es[2]*yVal[2][i]+es[3]*yVal[3][i]+es[4]*yVal[4][i];
                 else 
@@ -559,8 +582,8 @@
                 }
             }
 
-            trace=[]
-            for(i=0;i<5;i++)
+            trace=[];
+            for(i=0;i<5;i++)/*selects graphs to show based on enable*/
                 if(e[i].checked)
                     trace.push(trc[i]);
             trace.push(trc[5]);
@@ -585,7 +608,8 @@
                         },
                     linecolor: 'black',
                     linewidth: 2,
-                    mirror: true
+                    mirror: true,
+                    range: [-50,50],
                 },
                 yaxis: {
                     title: "y",
@@ -596,7 +620,8 @@
                         },
                     linecolor: 'black',
                     linewidth: 2,
-                    mirror: true
+                    mirror: true,
+                    range: [-50,50],
                 }
             };
 
